fix dark mode

--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -294,6 +294,18 @@ html.themeDark {
 
     .sidebar { background-color: var(--color-bg-secondary); box-shadow: 0px 4px 16px rgba(0,0,0,0.2); }
     .sidebar.fixed { box-shadow: 0px 0px rgba(0,0,0,0); }
+	.sidebar {
+		.icon.back { background-image: url('#{$themePath}/icon/widget/back.svg'); }
+		> #containerObject {
+			> .inner {
+				> .head {
+					.titleWrap {
+						.icon.back { background-image: url('#{$themePath}/icon/widget/back.svg'); }
+					}
+				}
+			}
+		}
+	}
 
 	/* Navigation */
 
